feat: improved exception handling (#3)
* feat: improved exception handling

* fix: formatting

* fix: removed unused var

* fix: formatted

* feat: upgrade parent pom

* fix: format

* fix: import sort